Bug 373474: Scrollbar buttons don't get invalidated (i.e. for notification box or resizing). r+sr=roc.